--- a/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
+++ b/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
@@ -123,45 +123,59 @@ ruleset=📧邮件服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/maste
 ruleset=🔎搜索引擎,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Bing/Bing.list
 
 # 9. 游戏
-ruleset=🎮游戏平台,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Game/Game.list
+# 细分游戏平台以提高匹配精度
+ruleset=🎮游戏平台,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Game/Game.yaml
+ruleset=🎮游戏平台,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Steam/Steam.yaml
+ruleset=🎮游戏平台,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Epic/Epic.yaml
+ruleset=🎮游戏平台,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Origin/Origin.yaml
+ruleset=🎮游戏平台,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Blizzard/Blizzard.yaml
+ruleset=🎮游戏平台,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Nintendo/Nintendo.yaml
+ruleset=🎮游戏平台,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/PlayStation/PlayStation.yaml
+ruleset=🎮游戏平台,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Xbox/Xbox.yaml
 
-# 10. 学术资源
-ruleset=✈️起飞,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Scholar/Scholar.list
-ruleset=✈️起飞,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GoogleScholar/GoogleScholar.list
+# 10. 云存储服务 - 更新为YAML格式提高效率
+ruleset=✈️起飞,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Dropbox/Dropbox.yaml
+ruleset=✈️起飞,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/OneDrive/OneDrive.yaml
+ruleset=✈️起飞,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/GoogleDrive/GoogleDrive.yaml
+ruleset=✈️起飞,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Box/Box.yaml
+ruleset=✈️起飞,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/iCloud/iCloud.yaml
+ruleset=✈️起飞,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Mega/Mega.yaml
 
-# 11. 加密货币和区块链服务
-ruleset=✈️起飞,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Cryptocurrency.list
-
-# 12. 云存储服务
-ruleset=✈️起飞,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Dropbox/Dropbox.list
-ruleset=✈️起飞,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/OneDrive/OneDrive.list
-ruleset=✈️起飞,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GoogleDrive/GoogleDrive.list
-
-# 13. 开发者工具和平台
-ruleset=🧰开发工具,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GitHub.list
-ruleset=🧰开发工具,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Vercel/Vercel.list
-ruleset=🧰开发工具,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GitLab/GitLab.list
-ruleset=🧰开发工具,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/JetBrains/JetBrains.list
-ruleset=🧰开发工具,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Docker/Docker.list
-ruleset=🧰开发工具,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/StackOverflow/StackOverflow.list
+# 11. 开发者工具和平台 - 添加更多开发平台和工具
+ruleset=🧰开发工具,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/GitHub/GitHub.yaml
+ruleset=🧰开发工具,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Vercel/Vercel.yaml
+ruleset=🧰开发工具,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/GitLab/GitLab.yaml
+ruleset=🧰开发工具,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/JetBrains/JetBrains.yaml
+ruleset=🧰开发工具,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Docker/Docker.yaml
+ruleset=🧰开发工具,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/StackOverflow/StackOverflow.yaml
 ruleset=🧰开发工具,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Developer/Developer.yaml
+ruleset=🧰开发工具,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Atlassian/Atlassian.yaml
+ruleset=🧰开发工具,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/AWS/AWS.yaml
+ruleset=🧰开发工具,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Firebase/Firebase.yaml
+ruleset=🧰开发工具,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/MongoDB/MongoDB.yaml
 
-# 14. 中国大陆网站和IP
-# 优先使用Loyalsoldier规则集
-ruleset=🛩️墙内,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/master/applications.txt
-ruleset=🛩️墙内,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/master/direct.txt
-ruleset=🛩️墙内,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/master/private.txt
-ruleset=🛩️墙内,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/master/cncidr.txt
-# 下列规则部分内容与上面重复，注释以避免重复
-# ruleset=🛩️墙内,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
-ruleset=🛩️墙内,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
-ruleset=🛩️墙内,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Download.list
-ruleset=🛩️墙内,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaMedia.list
-ruleset=🛩️墙内,https://raw.githubusercontent.com/moistrr/Clashruleset/refs/heads/main/config/zhilian.list
+# 12. 中国大陆网站和IP - 使用更可靠的规则源
+ruleset=🛩️墙内,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/applications.txt
+ruleset=🛩️墙内,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/direct.txt
+ruleset=🛩️墙内,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/private.txt
+ruleset=🛩️墙内,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/cncidr.txt
+ruleset=🛩️墙内,https://cdn.jsdelivr.net/gh/ACL4SSR/ACL4SSR@master/Clash/ChinaCompanyIp.list
+ruleset=🛩️墙内,https://cdn.jsdelivr.net/gh/ACL4SSR/ACL4SSR@master/Clash/Download.list
+ruleset=🛩️墙内,https://cdn.jsdelivr.net/gh/ACL4SSR/ACL4SSR@master/Clash/ChinaMedia.list
+# 替换可能不稳定的zhilian规则源
+ruleset=🛩️墙内,https://cdn.jsdelivr.net/gh/ACL4SSR/ACL4SSR@master/Clash/ChinaDomain.list
 ruleset=🛩️墙内,[]GEOIP,CN,no-resolve
 
+# 13. Web3和区块链服务 (新增)
+ruleset=✈️起飞,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Cryptocurrency/Cryptocurrency.yaml
+ruleset=✈️起飞,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Blockchain/Blockchain.yaml
+
+# 14. 新增安全服务分类
+ruleset=✈️起飞,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/1Password/1Password.yaml
+ruleset=✈️起飞,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Bitwarden/Bitwarden.yaml
+
 # 15. 国外网站集合规则（优先级最低的常规代理规则）
-ruleset=✈️起飞,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/master/proxy.txt
+ruleset=✈️起飞,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/proxy.txt
 
 # 16. 兜底规则
 ruleset=🐟漏网之鱼,[]FINAL
