--- a/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
+++ b/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
@@ -72,108 +72,96 @@ custom_proxy_group=🇺🇸美国`url-test`(?i)美|states|us`https://www.gstatic
 custom_proxy_group=🎏其他`select`^(?!.*(港|hongkong|hk|台|taiwan|tw|新|狮|獅|singapore|sg|日|japan|jp|美|states|us)).*$
 
 # ========== 分流规则配置 ==========
-# 1. 优先级最高：广告拦截
-ruleset=💩广告,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/AdvertisingLite/AdvertisingLite.yaml
-ruleset=💩广告,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Hijacking/Hijacking.list
-ruleset=💩广告,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Privacy/Privacy.list
-
-# 2. 本地/直连规则
+# 1. 本地网络和基础直连规则（优先级最高，规则集小）
 ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
 ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
 
-# 3. 重要的国内服务单独分流 - 确保稳定性
-ruleset=🛩️墙内,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/WeChat/WeChat.list
-ruleset=🛩️墙内,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/AliPay/AliPay.list
-ruleset=🛩️墙内,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/UnionPay/UnionPay.list
-ruleset=🛩️墙内,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/JD/JD.list
-ruleset=🛩️墙内,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Taobao/Taobao.list
-ruleset=🛩️墙内,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/TencentVideo/TencentVideo.list
-ruleset=🛩️墙内,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/iQIYI/iQIYI.list
-ruleset=🛩️墙内,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Youku/Youku.list
-ruleset=🛩️墙内,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/NetEaseMusic/NetEaseMusic.list
-ruleset=🛩️墙内,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Baidu/Baidu.list
+# 2. 广告和隐私保护（高优先级，避免不必要的连接）
+ruleset=💩广告,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/AdvertisingLite/AdvertisingLite.yaml
 
-# 4. AI服务 - 整合所有AI平台规则
-ruleset=🤖AI,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/AI/AI.yaml
+# 3. 预处理常见特定域名（添加常见域名到prepend-rules，匹配效率最高）
+# ...已在DNS配置的prepend-rules部分实现...
+
+# 4. 开发和AI服务（高频使用的工作工具）
+ruleset=🧰开发工具,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GitHub/GitHub.list
+ruleset=🧰开发工具,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Vercel/Vercel.list
+ruleset=🧰开发工具,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GitLab/GitLab.list
+ruleset=🧰开发工具,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/JetBrains/JetBrains.list
+ruleset=🧰开发工具,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/StackOverflow/StackOverflow.list
+ruleset=🧰开发工具,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Docker/Docker.list
+ruleset=🧰开发工具,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Developer/Developer.yaml
+
 ruleset=🤖AI,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/OpenAi.list
 ruleset=🤖AI,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Claude.list
+ruleset=🤖AI,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/AI/AI.yaml
 
-# 5. 即时通讯工具
+# 5. 即时通讯和游戏（低延迟需求）
 ruleset=📱电报,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Telegram/Telegram.list
 ruleset=📱电报,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/master/telegramcidr.txt
 
-# 6. 流媒体分流 - 从特定到一般
+ruleset=🎮游戏平台,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Steam/Steam.list
+ruleset=🎮游戏平台,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Epic/Epic.list
+ruleset=🎮游戏平台,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Game/Game.list
+
+# 6. 重要的国内服务（高频使用的本地服务）
+ruleset=🛩️墙内,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/WeChat/WeChat.list
+ruleset=🛩️墙内,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/AliPay/AliPay.list
+ruleset=🛩️墙内,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/UnionPay/UnionPay.list
+ruleset=🛩️墙内,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Baidu/Baidu.list
+ruleset=🛩️墙内,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/ChinaMedia/ChinaMedia.list
+
+# 7. 主要国际平台服务（常用大型服务提供商）
+ruleset=🛡️Google服务,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Google/Google.list
+ruleset=🛡️Google服务,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GoogleSearch/GoogleSearch.list
+ruleset=🍎苹果服务,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Apple/Apple.list
+ruleset=Ⓜ️微软服务,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Microsoft/Microsoft.list
+
+# 8. 流媒体服务（视频流量大，但访问频率相对较低）
 ruleset=📺B站,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/BiliBili/BiliBili.list
 ruleset=📺B站,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/BilibiliHMT.list
 ruleset=🎬Netflix,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Netflix/Netflix.list
 ruleset=🎬YouTube,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/YouTube/YouTube.list
 ruleset=🟢Spotify,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Spotify/Spotify.list
-# 增加更多流媒体服务
 ruleset=🎬流媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Disney/Disney.list
 ruleset=🎬流媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/HBO/HBO.list
 ruleset=🎬流媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/PrimeVideo/PrimeVideo.list
 ruleset=🎬流媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GlobalMedia/GlobalMedia.list
 
-# 7. 社交媒体平台
+# 9. 社交媒体平台
 ruleset=📲社交媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Twitter/Twitter.list
 ruleset=📲社交媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Instagram/Instagram.list
 ruleset=📲社交媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Discord/Discord.list
 ruleset=📲社交媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/TikTok/TikTok.list
-# 新增远程工作社交工具和设计工具
 ruleset=📲社交媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Slack/Slack.list
 ruleset=📲社交媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Zoom/Zoom.list
 ruleset=📲社交媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Notion/Notion.list
 ruleset=📲社交媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Figma/Figma.list
 ruleset=📲社交媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Canva/Canva.list
 
-# 8. 大型服务提供商分流
-ruleset=🛡️Google服务,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Google/Google.list
-ruleset=🛡️Google服务,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GoogleSearch/GoogleSearch.list
-ruleset=🍎苹果服务,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Apple/Apple.list
-ruleset=Ⓜ️微软服务,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Microsoft/Microsoft.list
+# 10. 其他服务（使用频率相对较低）
 ruleset=📧邮件服务,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Mail/Mail.list
 ruleset=🔎搜索引擎,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Bing/Bing.list
 ruleset=🔎搜索引擎,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GoogleSearch/GoogleSearch.list
-
-# 9. 游戏
-ruleset=🎮游戏平台,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Game/Game.list
-ruleset=🎮游戏平台,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Steam/Steam.list
-ruleset=🎮游戏平台,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Epic/Epic.list
-
-# 10. 云存储服务
 ruleset=✈️起飞,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Dropbox/Dropbox.list
 ruleset=✈️起飞,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/OneDrive/OneDrive.list
 ruleset=✈️起飞,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GoogleDrive/GoogleDrive.list
 
-# 11. 开发者工具和平台
-ruleset=🧰开发工具,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GitHub/GitHub.list
-ruleset=🧰开发工具,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Vercel/Vercel.list
-ruleset=🧰开发工具,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GitLab/GitLab.list
-ruleset=🧰开发工具,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/JetBrains/JetBrains.list
-ruleset=🧰开发工具,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Docker/Docker.list
-ruleset=🧰开发工具,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/StackOverflow/StackOverflow.list
-ruleset=🧰开发工具,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Developer/Developer.yaml
-
-# 12. 中国大陆网站和IP (更全面的中国大陆分流规则)
-# 优先使用最新和最全面的规则集
-ruleset=🛩️墙内,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/China/China.list
-ruleset=🛩️墙内,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/ChinaMax/ChinaMax.list
+# 11. 中国大陆网站和IP（规则集较大，放在后面）
+# 按从小到大的规则排序，提高匹配效率
 ruleset=🛩️墙内,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/master/applications.txt
-ruleset=🛩️墙内,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/master/direct.txt
 ruleset=🛩️墙内,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/master/private.txt
-ruleset=🛩️墙内,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/master/cncidr.txt
-ruleset=🛩️墙内,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
 ruleset=🛩️墙内,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
 ruleset=🛩️墙内,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Download.list
-ruleset=🛩️墙内,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/ChinaMedia/ChinaMedia.list
-ruleset=🛩️墙内,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/ChinaIPs/ChinaIPs.list
+ruleset=🛩️墙内,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/master/direct.txt
+# 大型规则集放在中国规则的最后
+ruleset=🛩️墙内,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/master/cncidr.txt
 ruleset=🛩️墙内,[]GEOIP,CN,no-resolve
 
-# 13. 国外网站集合规则（优先级最低的常规代理规则）
+# 12. 国外网站集合规则（规则集大，放在最后）
 ruleset=✈️起飞,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/master/proxy.txt
 ruleset=✈️起飞,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Global/Global.list
 
-# 14. 兜底规则
+# 13. 兜底规则（保持在最后）
 ruleset=🐟漏网之鱼,[]FINAL
 
 # ========== Clash核心配置 ==========
