--- a/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
+++ b/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
@@ -163,7 +163,6 @@ ruleset=✈️起飞,https://raw.githubusercontent.com/blackmatrix7/ios_rule_scr
 
 # 13. 兜底规则（保持在最后）
 ruleset=🐟漏网之鱼,[]FINAL
-
 # ========== Clash核心配置 ==========
 # 基础网络设置
 mixed-port: 10808
@@ -199,12 +198,28 @@ dns:
   fake-ip-range: 198.18.0.1/16
   fake-ip-filter:          # 添加常见需要真实IP的服务
     - '*.lan'
+    - 'stun.*.*'
+    - 'stun.*.*.*'
+    - '*.msftncsi.com'
+    - 'msftconnecttest.com'
+    - 'time.*.com'
+    - 'time.*.gov'
+    - 'time.*.edu.cn'
+    - '*.ntp.org.cn'
+    - '*.pool.ntp.org'
+    - 'time.apple.com'
     - 'localhost.ptlogin2.qq.com'
     - '*.qq.com'
     - '*.alipay.com'
     - '*.taobao.com'
     - 'mtalk.google.com'
     - 'lens.l.google.com'
+    - '*.aliyun.com'
+    - '*.alicdn.com'
+    - '*.jd.com'
+    - '*.tmall.com'
+    - '*.tencent.com'
+    - '*.weixin.qq.com'
   use-hosts: true
   nameserver-cache-size: 8192 # 增加缓存大小
   prefer-h3: true
@@ -276,14 +291,22 @@ dns:
     'domain:telegram.org,domain:t.me': [https://dns.google/dns-query]
     'domain:spotify.com,domain:spotifycdn.com': [https://dns.google/dns-query]
     'domain:cloudflare.com,domain:cloudflare.net': [https://dns.google/dns-query]
-    'domain:github.com,domain:githubusercontent.com': [https://dns.google/dns-query]
+
 # 常用域名预处理规则
 prepend-rules:
   - 'DOMAIN-SUFFIX,openai.com,🤖AI'
   - 'DOMAIN-SUFFIX,anthropic.com,🤖AI'
   - 'DOMAIN-SUFFIX,claude.ai,🤖AI'
+  - 'DOMAIN-SUFFIX,perplexity.ai,🤖AI'
+  - 'DOMAIN-SUFFIX,gemini.google.com,🤖AI'
+  - 'DOMAIN-SUFFIX,bard.google.com,🤖AI'
+  - 'DOMAIN-SUFFIX,poe.com,🤖AI'
+  - 'DOMAIN-SUFFIX,midjourney.com,🤖AI'
   - 'DOMAIN-SUFFIX,github.com,🧰开发工具'
   - 'DOMAIN-SUFFIX,githubusercontent.com,🧰开发工具'
+  - 'DOMAIN-SUFFIX,gitlab.com,🧰开发工具'
+  - 'DOMAIN-SUFFIX,vercel.app,🧰开发工具'
+  - 'DOMAIN-SUFFIX,vercel.com,🧰开发工具'
   - 'DOMAIN-SUFFIX,google.com,🛡️Google服务'
   - 'DOMAIN-SUFFIX,youtube.com,🎬YouTube'
   - 'DOMAIN-SUFFIX,youtu.be,🎬YouTube'
